--- a/login-box.html
+++ b/login-box.html
@@ -16,9 +16,7 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
   <template>
 
     <link rel="stylesheet" href="login-box.css">
-    <style>
-
-    </style>
+    <style type="text/css" id="rotate"></style>
 
     <core-overlay id="overlay" layered backdrop opened="{{opened}}" autoCloseDisabled="{{autoCloseDisabled}}"  transition="core-transition-center"></core-overlay>
     <header>How do you want to log in?</header>
@@ -33,7 +31,7 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
           </div>
           <a id="forgot" on-click="{{setForgot}}">Forgot password?</a>
         </div>
-        <div id="swipe" class="">
+        <div id="swipe" class="" swipe-text="{{action}}">
           <button type="submit" id="action" on-click="{{doAction}}" onclick="return false;">{{action}}</button>
         </div>
         <button type="reset" id="back" on-click="{{resetForm}}" class="{{doForgot}} {{doCreate}}">Back</button>
@@ -54,6 +52,15 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
     var swipe = {
       max: 222,
 
+      rotate: function(deg) {
+        this.innerHTML =
+          '.swipe > button:before { ' +
+            '-webkit-transform: rotate(' + deg + 'deg); ' +
+            '-moz-transform: rotate(' + deg + 'deg); ' +
+            '-ms-transform: rotate(' + deg + 'deg); ' +
+            '-o-transform: rotate(' + deg + 'deg); ' +
+            'transform: rotate(' + deg + 'deg); }';
+      },
       translate: function(dx) {
         this.style.transform =
         this.style.mozTransform =
@@ -69,7 +76,7 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
       track: function(element, event) {
         var dx = event.dx > 0 ? ( event.dx < swipe.max ? event.dx : swipe.max ) : 0;
         //console.warn('track', this, arguments);
-        this._srotate = 540 / swipe.max * dx;
+        swipe.rotate.call(this.$.rotate, 540 / swipe.max * dx);
         swipe.translate.call(element, dx);
 
         element.className = element.className.replace(/\s*swipe-eol\s*/g, '');
@@ -83,7 +90,7 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
         }
         else {
           element.style.transitionDuration = '';
-          this._srotate = 0;
+          swipe.rotate.call(this.$.rotate, 0);
           swipe.translate.call(element, 0);
 
           element.className = element.className.replace(/\s*swipe-active\s*/g, '');
@@ -95,8 +102,6 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
     };
 
     Polymer('login-box', {
-      _srotate: 0,
-
       error: '',
       action: 'Log in',
       doForgot: '',
@@ -133,6 +138,7 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
 
       resetForm: function() {
         this.$.swipe.className = '';
+        this.$.action.style.cssText = '';
 
         this.error = '';
         this.action = 'Log in';
@@ -147,7 +153,7 @@ Copyright (c) 2014 muiis Authors. All rights reserved.
       },
       setCreate: function() {
         this.error = '';
-        this.action = 'Create account';
+        this.action = 'Swipe to create.';
         this.doCreate = 'fade-out';
         this.doForgot = '';
         this.$.swipe.className = 'swipe';
